[gd_scene load_steps=10 format=3 uid="uid://cv5g67rdpli7t"]

[ext_resource type="Script" path="res://UI/ui.gd" id="1_na5u2"]
[ext_resource type="Texture2D" uid="uid://dsrvwxq5gbcme" path="res://UI/Textures/Sprite-0003.png" id="2_dj03h"]
[ext_resource type="Texture2D" uid="uid://d2yvbqx1b6aot" path="res://UI/Textures/Sprite-0002.png" id="3_kai7v"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ux5y"]
texture = ExtResource("2_dj03h")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2kouv"]
texture = ExtResource("2_dj03h")
modulate_color = Color(0.647059, 0.647059, 0.647059, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_04bhm"]
texture = ExtResource("2_dj03h")
modulate_color = Color(0.407843, 0.407843, 0.407843, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aa355"]
texture = ExtResource("3_kai7v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ddg86"]
texture = ExtResource("3_kai7v")
modulate_color = Color(0.647059, 0.647059, 0.647059, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c1b1o"]
texture = ExtResource("3_kai7v")
modulate_color = Color(0.407843, 0.407843, 0.407843, 1)

[node name="UI" type="CanvasLayer" groups=["UI"]]
script = ExtResource("1_na5u2")

[node name="Backg" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="PlayerOneHealth" type="Label" parent="."]
offset_left = 16.0
offset_right = 160.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 21
text = "Blue Health: 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerTwoHealth" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 21
text = "Red Health: 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -92.0
offset_right = 112.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 63
theme_override_styles/normal = SubResource("StyleBoxTexture_8ux5y")
theme_override_styles/hover = SubResource("StyleBoxTexture_2kouv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_04bhm")
text = "Start"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 60.0
offset_right = 96.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxTexture_aa355")
theme_override_styles/hover = SubResource("StyleBoxTexture_ddg86")
theme_override_styles/pressed = SubResource("StyleBoxTexture_c1b1o")
text = "Quit"

[node name="MainText" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -264.0
offset_right = 264.0
offset_bottom = 248.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
text = "Tanky Boys"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
